tests/snapshots/cli__help.snap
---
source: tests/cli.rs
assertion_line: 11
info:
  program: example-rust-cli
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Usage: example-rust-cli <COMMAND>

Commands:
  version     Print version
  hello       Say hello
  completion  Print shell completion scripts
  help        Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

----- stderr -----
