tests/snapshots/cli__missing_command.snap
---
source: tests/cli.rs
assertion_line: 22
info:
  program: example-rust-cli
  args: []
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Usage: example-rust-cli <COMMAND>

Commands:
  version     Print version
  hello       Say hello
  completion  Print shell completion scripts
  help        Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
