tests/snapshots/cli__missing_name.snap
---
source: tests/cli.rs
assertion_line: 23
info:
  program: example-rust-cli
  args:
    - hello
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  --name <NAME>

Usage: example-rust-cli hello --name <NAME>

For more information, try '--help'.
